<resources>
    <string name="app_name">BINGO</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen2">FullscreenActivity</string>
    <string name="quit">QUIT</string>
    <string name="bingo">BINGO</string>
    <string name="start">START</string>
    <string name="strangegames_inc">StrangeGames.Inc</string>
    <string name="about_us">ABOUT US</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="name1">Name</string>
    <string name="title_activity_fullscreen3">FullscreenActivity</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="let_s_arrange_your_bingo_card">Let\'s arrange your Bingo card !</string>
    <string name="title_activity_fullscreen4">FullscreenActivity</string>
    <string name="next">NEXT</string>
    <string name="select_a_number">Select a number!</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="retry">RETRY</string>
    <string name="todo6">TODO</string>
    <string name="title_activity_fullscreen5">FullscreenActivity</string>
    <string name="created_by_amal_nath_m_nthank_you_guys_for_supporting">Created by Amal Nath M.\nThank you for your support.</string>
    <string name="todo7">TODO</string>
    <string name="how_to_play">How to play</string>
    <string name="title_activity_fullscreen6">FullscreenActivity</string>
    <string name="install_bingo_game_in_all_the_player_devices_n_n_nfirst_each_player_has_to_create_their_own_bingo_card_n_nthen_a_number_is_called_by_the_first_player_which_is_striked_off_in_all_the_player_cards_n_nthe_procedure_is_repeated_for_all_the_players_in_order_n_neach_time_a_row_a_column_or_a_diagonal_of_the_card_is_striked_off_the_player_gets_one_point_n_nthe_first_player_to_get_5_points_wins_bingo_n">Install BINGO game in all the player devices.\n\n\nThe players are connected using WiFi Peer-to-peer Direct Connectivity.\n\nThen, each player has to create their own Bingo card.\n\nThen, a number is called by the first player which is struck off in all the player cards.\n\nThe procedure is repeated for all the players in order.\n\nEach time a row, a column or a diagonal of the card is struck off, the player gets one point.\n\nThe first player to get 5 points wins ! BINGO !\n</string>
    <string name="title_activity_fullscreen7">FullscreenActivity</string>
    <string name="connect_to_local_wifi_hotspot">Connect to local network</string>
    <string name="host">HOST</string>
    <string name="join">JOIN</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="title_activity_fullscreen8">FullscreenActivity</string>
    <string name="title_activity_fullscreen9">FullscreenActivity</string>
    <string name="enter_no_of_players">Enter no of players</string>
    <string name="enter_game_name">Enter game name</string>
    <string name="turn_on_wifi_hotspot">Turn on WiFi hotspot</string>
    <string name="manually_connect_to_host_hotspot">Manually connect to host hotspot</string>
    <string name="connect_to_peers">Connect to Peers</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="connect_to_host">Connect to host</string>
    <string name="scan_for_hosts">Scan for hosts</string>
    <string name="establish_wi_fi_direct_p2p_connection">Establish Wi-Fi Direct P2P Connection</string>
    <string name="connect_using_wi_fi_p2p_direct">Connect using Wi-Fi P2P Direct</string>
    <string name="connect">CONNECT</string>
</resources>